test/compile_errors/stage1/obj/bool_not_on_undefined_value.zig
comptime {
    var a: bool = undefined;
    _ = !a;
}

// bool not on undefined value
//
// tmp.zig:3:10: error: use of undefined value here causes undefined behavior
